Adjust breakpoints to correct layout issues

--- a/src/stylesheets/content.less
+++ b/src/stylesheets/content.less
@@ -104,6 +104,7 @@ h1#intro-to-ollie {
   background: transparent;
   font-size: 16px;
   line-height: 21px;
+  overflow: scroll;
 }
 .content blockquote :first-child {
   padding-top: 0;
@@ -395,8 +396,8 @@ body.no-literate .content pre > code:hover::-webkit-scrollbar-thumb {
   }
   body:not(.no-literate) .content > pre,
   body:not(.no-literate) .content > blockquote {
-    width: 380px;
-    padding-left: 20px;
+    width: 425px;
+    padding-left: 60px;
     padding-right: 20px;
     float: right;
     clear: right;
@@ -662,22 +663,22 @@ div.hidden {
  */
 @media (min-width: 1224px) {
   body:not(.no-literate) .content {
-    width: 1024px;
+    width: 1000px;
   }
 
   body:not(.no-literate) .content > pre,
   body:not(.no-literate) .content > blockquote {
-    width: 470px;
+    width: 500px;
   }
 }
 
 @media (min-width: 1320px) {
   body:not(.no-literate) .content {
-    width: 1099px; /* maximum acceptable width of this section */
+    width: 1050px;
   }
 
   body:not(.no-literate) .content > pre,
   body:not(.no-literate) .content > blockquote {
-    width: 545px;
+    width: 550px;
   }
 }
